fix(screen-message): bigger z-index and display title with an animation

--- a/features/screen-message/css/pl-screen-message.less
+++ b/features/screen-message/css/pl-screen-message.less
@@ -9,7 +9,7 @@
 
 .pl-screen-message {
   .noselect();
-  z-index: 1000;
+  z-index: 100000;
   position: fixed;
   top: 0;
   left: 0;
